--- a/web/index.html
+++ b/web/index.html
@@ -22,6 +22,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="flutter_web">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <script defer src="sql-wasm.js"></script>
 
   <title>flutter_web</title>
   <link rel="manifest" href="manifest.json">
